z-index map issue adjusted header to have a z-index of 1500

--- a/frontend/public/css/main.css
+++ b/frontend/public/css/main.css
@@ -2663,7 +2663,7 @@ h6 {
   top: 0;
   left: 0;
   right: 0;
-  z-index: 1000;
+  z-index: 1500;
   transition: 0.2s;
 }
 
